<resources>
    <string name="app_name">ML Challenge</string>
    <string name="free_shipping">Envio gratis</string>
    <string name="product_detail">Detalle del producto</string>
    <string name="without_results">SIN RESULTADOS</string>
    <string name="seller">VENDEDOR</string>
    <string name="unknown">unknow</string>
    <string name="go_to_ml">Ir a publicacion</string>
    <string name="new_">Nuevo</string>
    <string name="used">Usado</string>
    <string name="sold_quantity">Vendidos</string>
    <string name="apply">Aplicar</string>
    <string name="sort_by">Ordenar por:</string>
    <string name="show_attributes">Mostrar característica</string>
    <string name="no_results">Sin resultados</string>
    <string name="search_product">Buscar producto</string>
    <string name="fab_content_desc">Volver arriba</string>
    <string name="input_query">Ingrese nombre de un producto</string>
    <string name="retry">Reintentar</string>
</resources>